# LegacyConverter

./: .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: cargo-build.yml  pull-request.yml
src/: main.rs
src/args/: cyoob.rs  mod.rs
src/commands/: cyoob.rs  mod.rs
src/data/: cyoob.rs  mod.rs  package.rs
