[package]
name = "legacy-converter"
version = "0.1.0"
authors = ["RedBrumbler <redbrumbler.official@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
clap = { version = "3.0.0", features = ["derive"]}
zip = "0.5.13"
owo-colors = "3.0.1"

[profile.release]
opt-level = 3
lto = true